# neoh-backend

./: .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml  env-example  reset_db
backend/: backend.dockerfile  celeryworker.dockerfile  start-reload.sh  start.sh
backend/app/: prestart.sh  setup.cfg  tests-start.sh  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2444db5152e1_extend_youtube_video.py  928d4d384099_init.py  c6b1983e3bc1_init.py  d11f3ea5470c_fix_last_updated.py  d4867f3a4c0a_first_revision.py  e5faffc0d6c4_create_youtube_table.py  f830888cb73e_add_last_updated_to_video_metadata.py
backend/app/neoh_backend/: backend_pre_start.py  celeryworker_pre_start.py  main.py  tests_pre_start.py  worker.py
backend/app/neoh_backend/api/: deps.py
backend/app/neoh_backend/api/v1/: api.py
backend/app/neoh_backend/api/v1/endpoints/: items.py
backend/app/neoh_backend/core/: celery_app.py  config.py
backend/app/neoh_backend/crud/: __init__.py  base.py
backend/app/neoh_backend/db/: base.py  base_class.py  session.py
backend/app/neoh_backend/models/: __init__.py  item.py
backend/app/neoh_backend/models/youtube/: __init__.py  video.py  video_mutable_metadata.py  yt8m_vertical.py  yt8m_vocabulary.py
backend/app/neoh_backend/schemas/: __init__.py  item.py
backend/app/scripts/: format.sh  lint.sh  test-stop-fail.sh  test.sh
scripts/: build-push.sh  build.sh  deploy.sh  lint.sh  test-local.sh  test.sh
