[metadata]
name = neoh_backend
description = Watch random videos with your friends!
version = 1.0.0

[options]
python_requires = >=3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
install_requires =
  fastapi == 0.63.0
  uvicorn[standard] == 0.13.3
  gunicorn == 20.0.4
  pydantic == 1.7.3
  sqlalchemy == 1.3.22
  alembic == 1.5.1
  tenacity == 6.3.1
  celery == 4.4.2
  psycopg2-binary == 2.8.6
  raven == 6.10.0
  emails == 0.6

[options.extras_require]
tests =
  pytest==6.1.1
  pytest-cov==2.10.1
  black==20.8b1
  flake8==3.8.4
  mypy==0.782
  isort>=4.2.5,<5
  pre-commit==2.6.0
  detect-secrets==0.14.0
  sqlalchemy-stubs==0.3

[coverage:run]
branch = True
omit = 
    # Pre start files
    neoh_backend/tests_pre_start.py
    neoh_backend/backend_pre_start.py
    neoh_backend/celeryworker_pre_start.py
    # Only used by Alembic for migrations
    neoh_backend/db/base.py
    # Celery worker and Vendor classes
    # These run in the celeryworker container so the
    # coverage report has no way to see them
    neoh_backend/vendors/*
    neoh_backend/worker.py
    neoh_backend/email.py
    # The Logger class is just a very lightweight wrapper
    # over Python's built-in logging to hook into Celery
    # and FastAPIs logger. There is no real great way to
    # test this since we're not logging to a file.
    neoh_backend/core/logger.py

[coverage:report]
show_missing = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
line_length=88

# Global options:

[mypy]
plugins = pydantic.mypy, sqlmypy
ignore_missing_imports = True
disallow_untyped_defs = True


[flake8]
max-line-length = 88
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache,alembic

# Per-module options:
[mypy-tests.*]
ignore_errors = True